# foaap

./: .pre-commit-config.yaml  LICENSE  README.md  fast_foaas.py  fast_foass_test.py  foaap.py  foaap.pyi  foaap_test.py  pyproject.toml
.github/workflows/: test_and_check.yml
