[tool.poetry]
name = "foaap"
version = "2.2.0"
description = "Fuck Off As A Package"
authors = ["Ilhomidin Bahoraliev <itilhomidin@yandex.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ilhomidin/foaap"
keywords = ["FOASS"]
classifiers = [
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3"
  ]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
black = "20.8b1"
pre-commit = "^2.11.1"
pytest-cov = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''